Connect Spring Security.